<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/search_bar"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SearchView
            android:layout_width="380dp"
            android:layout_centerHorizontal="true"
            android:layout_height="50dp"
            android:background="@drawable/search_rounded"
            app:queryHint="@string/searchHint"
            app:searchIcon="@drawable/ic_search"
            app:iconifiedByDefault="false"/>
    </RelativeLayout>

<HorizontalScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/search_bar">


    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pro"
            style="@style/CustomChipStyle"
            app:chipIcon="@drawable/ic_pro"
            app:chipIconVisible="true"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuisines"
            style="@style/CustomChipStyle"/>


        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            style="@style/CustomChipStyle"
            app:closeIconEnabled="true"
            app:closeIcon="@drawable/ic_down"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max"
            style="@style/CustomChipStyle"/>



        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fastest"
            style="@style/CustomChipStyle"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offer"
            style="@style/CustomChipStyle"/>



        <com.google.android.material.chip.Chip
            android:id="@+id/chip7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/takeaway"
            style="@style/CustomChipStyle"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            style="@style/CustomChipStyle"
            app:closeIconEnabled="true"
            app:closeIcon="@drawable/ic_down"/>

    </com.google.android.material.chip.ChipGroup>
</HorizontalScrollView>

</RelativeLayout>